--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ gunicorn==19.4.5
 psycopg2==2.6.1
 whitenoise==2.0.6
 websocket-client==0.29.0
+backports.ssl-match-hostname==3.4.0.2
+requests==2.6.0
+six==1.9.0
+wsgiref==0.1.2
